# xarray-bounds

./: .coverage  .gitignore  .readthedocs.yaml  README.md  coverage.xml  pyproject.toml
docs/: requirements.txt
docs/source/: api.md  api.rst  conf.py  cookbook.ipynb  examples.ipynb  faq.md  index.md  index.rst  user_guide.ipynb
docs/source/_templates/autosummary/: accessor.rst  accessor_attribute.rst  accessor_method.rst
src/xarray_bounds/: __init__.py  _helpers.py  _version.py  accessors.py  core.py  datasets.py  exceptions.py  helpers.py  options.py  types.py  utilities.py  utils.py
src/xarray_bounds/data/: rainfall_hadukgrid_uk_60km_day_20200101-20200131.nc  tas_hadukgrid_uk_60km_ann_202001-202012.nc  tas_hadukgrid_uk_60km_mon_202001-202012.nc  tas_hadukgrid_uk_60km_seas_202001-202012.nc  tasmin.nc
tests/: constants.py  test_accessors.py  test_core.py  test_helpers.py  test_options.py  test_utilities.py
