[project]
name = "xarray-bounds"
version = "0.1.0"
description = "An xarray accessor for CF-compliant bounds "
readme = "README.md"
authors = [
    { name = "Mike Blackett", email = "27811528+mikeblackett@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "cf-xarray>=0.10.9",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "xarray>=2025.9.0",
    "xarray-strategies",
]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "h5netcdf>=1.7.3",
    "hypothesis>=6.140.2",
    "myst-nb>=1.3.0",
    "myst-parser>=4.0.1",
    "notebook>=7.4.6",
    "pandas-stubs>=2.3.2.250827",
    "pooch>=1.8.2",
    "pydata-sphinx-theme>=0.16.1",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "scipy>=1.16.2",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxemoji>=0.3.1",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["livecov"]

[tool.pytest.ini_options]
addopts = "--cov=xarray_bounds --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.uv.sources]
xarray-strategies = { path = "../xarray-strategies" }
