[project]
name = "xarray-bounds"
version = "0.1.0"
description = "An xarray accessor for CF-compliant bounds "
readme = "README.md"
authors = [
    { name = "Mike Blackett", email = "27811528+mikeblackett@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "cf-xarray>=0.10.9",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "xarray>=2025.9.0",
]

[project.optional-dependencies]
docs = [
    "myst-nb>=1.3.0",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinxemoji>=0.3.2",
]
test = [
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "h5netcdf>=1.7.3",
    "notebook>=7.4.6",
    "pandas-stubs>=2.3.2.250827",
    "pooch>=1.8.2",
    "pyright>=1.1.405",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "scipy>=1.16.2",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["livecov"]

[tool.pytest.ini_options]
addopts = "--cov=xarray_bounds --cov-report=xml --cov-report=term"
testpaths = ["tests"]
