[project]
name = "xarray-bounds"
version = "0.1.0"
description = "An xarray accessor for CF-compliant bounds "
readme = "README.md"
authors = [
    { name = "Mike Blackett", email = "27811528+mikeblackett@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "cf-xarray",
    "numpy",
    "pandas",
    "xarray>=2025.03.1",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pandas-stubs",
    "pyright",
    "ruff",
    "xarray[accel,io,parallel]",
    { include-group = "docs" },
    { include-group = "test" },
]
docs = [
    "myst-nb",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
]
test = [
    "coverage",
    "hypothesis",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["livecov"]

[tool.pytest.ini_options]
addopts = "--cov=xarray_bounds --cov-report=xml --cov-report=term"
testpaths = ["tests"]
